crates/antlr-rust-codegen/tests/antlr4_rust_gen_cli/snapshots/antlr4_rust_gen_cli__sections__section_lifecycle_semantics_manifest.snap
---
source: crates/antlr-rust-codegen/tests/antlr4_rust_gen_cli/sections.rs
expression: manifest
---
{
  "version": 2,
  "policy": "assume-true",
  "note": "unknown coordinates currently default to assume-true; a future minor release changes the default to error",
  "options": [],
  "grammars": [
    {
      "kind": "lexer",
      "name": "SectionLifecycleLexer",
      "coordinates": [],
      "sections": []
    },
    {
      "kind": "parser",
      "name": "SectionLifecycleParser",
      "coordinates": [],
      "sections": [
        {
          "kind": "named-action",
          "name": "init",
          "scope": null,
          "rule": "start",
          "rule_index": 0,
          "source": "SectionLifecycle.g4",
          "line": 4,
          "column": 0,
          "body": "crate::record_event(\"init\");",
          "disposition": "embedded"
        },
        {
          "kind": "named-action",
          "name": "after",
          "scope": null,
          "rule": "start",
          "rule_index": 0,
          "source": "SectionLifecycle.g4",
          "line": 5,
          "column": 0,
          "body": "crate::record_event(\"after\");",
          "disposition": "embedded"
        },
        {
          "kind": "finally",
          "name": null,
          "scope": null,
          "rule": "start",
          "rule_index": 0,
          "source": "SectionLifecycle.g4",
          "line": 8,
          "column": 0,
          "body": "crate::record_event(\"finally\"); return;",
          "disposition": "embedded"
        },
        {
          "kind": "catch",
          "name": null,
          "scope": null,
          "rule": "caught",
          "rule_index": 1,
          "source": "SectionLifecycle.g4",
          "line": 16,
          "column": 0,
          "body": "let _ = &error; crate::record_event(\"catch\");",
          "disposition": "embedded"
        },
        {
          "kind": "catch",
          "name": null,
          "scope": null,
          "rule": "rawIdent",
          "rule_index": 2,
          "source": "SectionLifecycle.g4",
          "line": 24,
          "column": 0,
          "body": "let _ = &r#type; crate::record_event(\"raw-identifier-catch\");",
          "disposition": "embedded"
        },
        {
          "kind": "catch",
          "name": null,
          "scope": null,
          "rule": "caughtWithFinally",
          "rule_index": 3,
          "source": "SectionLifecycle.g4",
          "line": 32,
          "column": 0,
          "body": "let _ = &error; crate::record_event(\"catch-before-finally\"); return;",
          "disposition": "embedded"
        },
        {
          "kind": "finally",
          "name": null,
          "scope": null,
          "rule": "caughtWithFinally",
          "rule_index": 3,
          "source": "SectionLifecycle.g4",
          "line": 37,
          "column": 0,
          "body": "crate::record_event(\"finally-after-catch\");",
          "disposition": "embedded"
        }
      ]
    }
  ]
}
